--- a/.github/workflows/syncToJanBlogs.yml
+++ b/.github/workflows/syncToJanBlogs.yml
@@ -23,6 +23,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install PyGithub GitPython # Add any other dependencies your script requires
 
+      - name: Set Git Config
+        run: |
+          git config --local user.email "saifeemustafaq@gmail.com"
+          git config --local user.name "saifeemustafaq"
+
       - name: Run Sync Script
         run: python .github/scripts/sync_script.py
         env:
