--- a/.harness/testghaperformance.yaml
+++ b/.harness/testghaperformance.yaml
@@ -33,7 +33,7 @@ pipeline:
                   spec:
                     uses: actions/setup-python@v2
                     with:
-                      python-version: "'3.x'"
+                      python-version: "'3.10'"
               - step:
                   type: Run
                   name: Install Dependencies
